gateway-api/app2/deploy-whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: traefik/whoami:v1.8
        name: app2
        args:
        - --name
        - app2
        ports:
        - containerPort: 80
