gateway-api/app2/svc-whoami.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app2
  name: app2
  namespace: app2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
