gateway-api/app2/route-whoami.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app2-external
  namespace: app2
spec:
  parentRefs:
  - name: demo-web-gw-external
    namespace: default
  hostnames:
  - "app2.34.111.220.34.nip.io"
  rules:
  - backendRefs:
    - name: app2
      port: 80
